force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/TOBJ_AvaliacaoHSE__c.object-meta.xml
<CustomObject>
    <label>HSEQ Evaluation</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{0000}</displayFormat>
        <label>HSE Evaluation Cod</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HSEQ Evaluation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>