force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_101__c.field-meta.xml
<CustomField>
    <fullName>TCF_101__c</fullName>
    <formula>IF(ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),&quot;A contratada possui algum processo para identificar, classificar, gerenciar e reduzir impactos ambientais das suas atividades?&quot;,&quot;Does the contractor have any process to identify, classify, manage and reduce the environmental impacts of its activities?&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>All evidence must be attached</inlineHelpText>
    <label>10.1</label>
    <type>Text</type>
</CustomField>