force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_102__c.field-meta.xml
<CustomField>
    <fullName>TCF_102__c</fullName>
    <formula>IF(ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),&quot;A contratada possui algum processo para identificar, classificar, gerenciar e reduzir resíduos gerados pelas suas atividades?&quot;,&quot;Does the contractor have any process to identify, classify, manage and reduce waste generated by its activities?&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>All evidence must be attached</inlineHelpText>
    <label>10.2</label>
    <type>Text</type>
</CustomField>