force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_111__c.field-meta.xml
<CustomField>
    <fullName>TCF_111__c</fullName>
    <formula>IF(ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),&quot;A contratada realiza investigação de incidente / acidente para todos os eventos que ocorrem dentro das suas instalações e das instalações do cliente?&quot;,&quot;Does the contractor conduct an incident / accident investigation for all events that occur within its facilities and the client&apos;s facilities?&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>11.1</label>
    <type>Text</type>
</CustomField>