force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Account__c.field-meta.xml
<CustomField>
    <fullName>TCF_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>TRN_HSEEvaluation_Account</relationshipName>
    <type>Lookup</type>
</CustomField>