force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_AET__c.field-meta.xml
<CustomField>
    <fullName>TCF_AET__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AET</label>
    <type>Checkbox</type>
</CustomField>