force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_AnalistaHSEQ__c.field-meta.xml
<CustomField>
    <fullName>TCF_AnalistaHSEQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HSEQ Analyst</label>
    <type>Checkbox</type>
</CustomField>