force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Ano__c.field-meta.xml
<CustomField>
    <fullName>TCF_Ano__c</fullName>
    <formula>YEAR(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ano</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>