force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Answered__c.field-meta.xml
<CustomField>
    <fullName>TCF_Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Answered</label>
    <type>Checkbox</type>
</CustomField>