force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Auditorias_Internas__c.field-meta.xml
<CustomField>
    <fullName>TCF_Auditorias_Internas__c</fullName>
    <formula>TCF_SafetyCultureSection8__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auditorias Internas</label>
    <type>Text</type>
</CustomField>