force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_AuditoriasInternas__c.field-meta.xml
<CustomField>
    <fullName>TCF_AuditoriasInternas__c</fullName>
    <formula>VALUE(TEXT(TCF_RatingSection8__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>8 AUDITORIAS INTERNAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>