force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_AvisoAvaliacaoItem5_1__c.field-meta.xml
<CustomField>
    <fullName>TCF_AvisoAvaliacaoItem5_1__c</fullName>
    <formula>IF(
	ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),
 IMAGE($Setup.TCS_ImagesMonitoring__c.TCF_Item5_1PT__c, &quot;item5.1-pt&quot;),
	IMAGE($Setup.TCS_ImagesMonitoring__c.TCF_Item5_1EN__c, &quot;item5.1-en&quot;)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disclamer Item 5.1</label>
    <type>Text</type>
</CustomField>