force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_AvisoAvaliacaoItem5_2__c.field-meta.xml
<CustomField>
    <fullName>TCF_AvisoAvaliacaoItem5_2__c</fullName>
    <formula>IF(
	ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),
	IMAGE($Setup.TCS_ImagesMonitoring__c.TCF_Item5_2PT__c, &quot;item5.2-pt&quot;),
	IMAGE($Setup.TCS_ImagesMonitoring__c.TCF_Item5_2EN__c, &quot;item5.2-en&quot;)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disclamer Item 5.2</label>
    <type>Text</type>
</CustomField>