force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_AvisoAvaliacaoSecao10__c.field-meta.xml
<CustomField>
    <fullName>TCF_AvisoAvaliacaoSecao10__c</fullName>
    <formula>IF(
	ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),
 IMAGE($Setup.TCS_ImagesMonitoring__c.TCF_Secao10PT__c, &quot;section10-pt&quot;),
	IMAGE($Setup.TCS_ImagesMonitoring__c.TCF_Secao10EN__c, &quot;section10-en&quot;)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disclamer Section 10</label>
    <type>Text</type>
</CustomField>