force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_AvisoAvaliacaoSecao11__c.field-meta.xml
<CustomField>
    <fullName>TCF_AvisoAvaliacaoSecao11__c</fullName>
    <formula>IF(
	ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),
	IMAGE($Setup.TCS_ImagesMonitoring__c.TCF_Secao11PT__c, &quot;section11-pt&quot;),
	IMAGE($Setup.TCS_ImagesMonitoring__c.TCF_Secao11EN__c, &quot;section11-en&quot;)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disclamer Section 11</label>
    <type>Text</type>
</CustomField>