force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_AvisoAvaliacaoSecao12__c.field-meta.xml
<CustomField>
    <fullName>TCF_AvisoAvaliacaoSecao12__c</fullName>
    <formula>IF(
	ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),
	IMAGE($Setup.TCS_ImagesMonitoring__c.TCF_Secao12PT__c, &quot;section12-pt&quot;),
	IMAGE($Setup.TCS_ImagesMonitoring__c.TCF_Secao12EN__c, &quot;section12-en&quot;)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disclamer Section 12</label>
    <type>Text</type>
</CustomField>