force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Bimestre1__c.field-meta.xml
<CustomField>
    <fullName>TCF_Bimestre1__c</fullName>
    <formula>IF( OR(MONTH(DATEVALUE(CreatedDate)) = 1, MONTH (DATEVALUE(CreatedDate)) = 2), TCF_GeneralRating__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1º Bimestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>