force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Bimestre2__c.field-meta.xml
<CustomField>
    <fullName>TCF_Bimestre2__c</fullName>
    <formula>IF( OR(MONTH(DATEVALUE(CreatedDate)) = 3, MONTH (DATEVALUE(CreatedDate)) = 4), TCF_GeneralRating__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2º Bimestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>