force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Bimestre3__c.field-meta.xml
<CustomField>
    <fullName>TCF_Bimestre3__c</fullName>
    <formula>IF( OR(MONTH(DATEVALUE(CreatedDate)) = 5, MONTH (DATEVALUE(CreatedDate)) = 6), TCF_GeneralRating__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3º Bimestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>