force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Cargo__c.field-meta.xml
<CustomField>
    <fullName>TCF_Cargo__c</fullName>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>