force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_CargoFuncao__c.field-meta.xml
<CustomField>
    <fullName>TCF_CargoFuncao__c</fullName>
    <formula>IF(ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;), &quot;Informar as pessoas chaves e seus cargos/funções e principais responsabilidades para o desempenho do sistema de gestão de HSEQ.&quot;, &quot;Inform key people and their positions/functions and main responsibilities for the performance of the HSEQ management system&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Attach the organization chart of the HSEQ department and the description of the team positions</inlineHelpText>
    <label>Occupation</label>
    <type>Text</type>
</CustomField>