force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_CertificacoesEmpresa__c.field-meta.xml
<CustomField>
    <fullName>TCF_CertificacoesEmpresa__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(ISO, API, INMETRO etc.)</inlineHelpText>
    <label>Company certifications</label>
    <type>Checkbox</type>
</CustomField>