force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Comentarios102__c.field-meta.xml
<CustomField>
    <fullName>TCF_Comentarios102__c</fullName>
    <label>Comments 10.2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>