force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Comentarios111__c.field-meta.xml
<CustomField>
    <fullName>TCF_Comentarios111__c</fullName>
    <label>Comments 11.1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>