force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_ComentariosGerais__c.field-meta.xml
<CustomField>
    <fullName>TCF_ComentariosGerais__c</fullName>
    <label>General Comments</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>