force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_ComunicacaoHSE__c.field-meta.xml
<CustomField>
    <fullName>TCF_ComunicacaoHSE__c</fullName>
    <formula>VALUE(TEXT( TCF_RatingSection6__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>6. COMUNICAÇÕES DE HSE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>