force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_ComunicacoesHSE__c.field-meta.xml
<CustomField>
    <fullName>TCF_ComunicacoesHSE__c</fullName>
    <formula>TCF_SafetyCultureSection6__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comunicações HSE</label>
    <type>Text</type>
</CustomField>