force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Contratada__c.field-meta.xml
<CustomField>
    <fullName>TCF_Contratada__c</fullName>
    <formula>TCF_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contratada</label>
    <type>Text</type>
</CustomField>