force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_CoordenadorHSEQ__c.field-meta.xml
<CustomField>
    <fullName>TCF_CoordenadorHSEQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HSEQ Coordinator</label>
    <type>Checkbox</type>
</CustomField>