force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_CurrentEmergencyPlan__c.field-meta.xml
<CustomField>
    <fullName>TCF_CurrentEmergencyPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Specific to the contract / service provided to Modec</inlineHelpText>
    <label>Current Emergency Plan</label>
    <type>Checkbox</type>
</CustomField>