force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_EmailAlertSent__c.field-meta.xml
<CustomField>
    <fullName>TCF_EmailAlertSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-mail Alert Sent</label>
    <type>Checkbox</type>
</CustomField>