force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_EmailInitialSent__c.field-meta.xml
<CustomField>
    <fullName>TCF_EmailInitialSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-mail Initial Sent</label>
    <type>Checkbox</type>
</CustomField>