force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_EngenheiroHSEQ__c.field-meta.xml
<CustomField>
    <fullName>TCF_EngenheiroHSEQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HSEQ Engineer</label>
    <type>Checkbox</type>
</CustomField>