force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Function__c.field-meta.xml
<CustomField>
    <fullName>TCF_Function__c</fullName>
    <label>Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>