force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_GeneralRating__c.field-meta.xml
<CustomField>
    <fullName>TCF_GeneralRating__c</fullName>
    <label>General Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>