force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_GeneralSafetyCulture__c.field-meta.xml
<CustomField>
    <fullName>TCF_GeneralSafetyCulture__c</fullName>
    <label>General Safety Culture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>