force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_GerenteHSEQ__c.field-meta.xml
<CustomField>
    <fullName>TCF_GerenteHSEQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HSEQ Manager</label>
    <type>Checkbox</type>
</CustomField>