force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Gestao_Ambiental__c.field-meta.xml
<CustomField>
    <fullName>TCF_Gestao_Ambiental__c</fullName>
    <formula>TCF_SafetyCultureSection10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gestão Ambiental</label>
    <type>Text</type>
</CustomField>