force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_GestaoAmbiental__c.field-meta.xml
<CustomField>
    <fullName>TCF_GestaoAmbiental__c</fullName>
    <formula>VALUE(TEXT(TCF_RatingSection10__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10 GESTÃO AMBIENTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>