force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_GestaoEmergencia__c.field-meta.xml
<CustomField>
    <fullName>TCF_GestaoEmergencia__c</fullName>
    <formula>TCF_SafetyCultureSection9__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gestão de Emergência</label>
    <type>Text</type>
</CustomField>