force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_GestaoEmergencias__c.field-meta.xml
<CustomField>
    <fullName>TCF_GestaoEmergencias__c</fullName>
    <formula>VALUE(TEXT(TCF_RatingSection9__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>9 GESTÃO DE EMERGÊNCIAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>