force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_GestaoRisco__c.field-meta.xml
<CustomField>
    <fullName>TCF_GestaoRisco__c</fullName>
    <formula>VALUE(TEXT(TCF_RatingSection4__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>4. GESTÃO DE RISCO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>