force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_GestaoRiscos__c.field-meta.xml
<CustomField>
    <fullName>TCF_GestaoRiscos__c</fullName>
    <formula>TCF_SafetyCultureSection4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gestão de Riscos</label>
    <type>Text</type>
</CustomField>