force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_HazardReport__c.field-meta.xml
<CustomField>
    <fullName>TCF_HazardReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hazard Report</label>
    <type>Checkbox</type>
</CustomField>