force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_HistoricoAcidenteIncidente__c.field-meta.xml
<CustomField>
    <fullName>TCF_HistoricoAcidenteIncidente__c</fullName>
    <formula>TCF_SafetyCultureSection11__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Histórico de Acidentes/Incidentes</label>
    <type>Text</type>
</CustomField>