force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_HistoricoAcidentesIncidentes__c.field-meta.xml
<CustomField>
    <fullName>TCF_HistoricoAcidentesIncidentes__c</fullName>
    <formula>VALUE(TEXT(TCF_RatingSection11__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>11 HISTÓRICO DE ACIDENTES/INCIDENTES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>