force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Info6__c.field-meta.xml
<CustomField>
    <fullName>TCF_Info6__c</fullName>
    <formula>IF(ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),&quot;Informar quantos eventos de cada tipo a empresa teve no período:&quot;,&quot;Inform how many events of each type the company had during the period:&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>All evidence must be attached</inlineHelpText>
    <label>⠀</label>
    <type>Text</type>
</CustomField>