force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_LCAT__c.field-meta.xml
<CustomField>
    <fullName>TCF_LCAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LCAT</label>
    <type>Checkbox</type>
</CustomField>