force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Lideranca__c.field-meta.xml
<CustomField>
    <fullName>TCF_Lideranca__c</fullName>
    <formula>VALUE(TEXT( TCF_RatingSection3__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3. LIDERANÇA, PAPÉIS E RESPONSABILIDADES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>