force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_LiderancaPapeisResponsabilidades__c.field-meta.xml
<CustomField>
    <fullName>TCF_LiderancaPapeisResponsabilidades__c</fullName>
    <formula>TCF_SafetyCultureSection3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liderança, Papéis e Responsabilidades</label>
    <type>Text</type>
</CustomField>