force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_LinkEvaluation__c.field-meta.xml
<CustomField>
    <fullName>TCF_LinkEvaluation__c</fullName>
    <formula>$Setup.ConfiguracoesGerais__c.URLPortalFornecedor__c + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Evaluation</label>
    <type>Text</type>
</CustomField>