force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_LogoModec__c.field-meta.xml
<CustomField>
    <fullName>TCF_LogoModec__c</fullName>
    <formula>IF(
ISPICKVAL($User.LanguageLocaleKey,&quot;pt_BR&quot;),
IMAGE($Setup.TCS_ImagesMonitoring__c.TCF_LogoModec__c, &quot;logo-pt&quot;),
IMAGE($Setup.TCS_ImagesMonitoring__c.TCF_LogoModec__c, &quot;logo-en&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>⠀</label>
    <type>Text</type>
</CustomField>