force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_ManutencaoCalibracaoEquipamento__c.field-meta.xml
<CustomField>
    <fullName>TCF_ManutencaoCalibracaoEquipamento__c</fullName>
    <formula>VALUE(TEXT(TCF_RatingSection12__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12 MANUTENÇÃO/CALIBRAÇÃO EQUIPAMENTOS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>