force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_ManutencaoCalibracaoEquipamentos__c.field-meta.xml
<CustomField>
    <fullName>TCF_ManutencaoCalibracaoEquipamentos__c</fullName>
    <formula>TCF_SafetyCultureSection12__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manutenção/Calibração Equipamentos</label>
    <type>Text</type>
</CustomField>