force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Modec_Comments_12__c.field-meta.xml
<CustomField>
    <fullName>TCF_Modec_Comments_12__c</fullName>
    <label>Modec Comments 12</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>