force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>TCF_Monitoring__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monitoring</label>
    <referenceTo>TOBJ_Monitoramento__c</referenceTo>
    <relationshipName>TRN_HSEEvaluationMonitoring</relationshipName>
    <type>Lookup</type>
</CustomField>