force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_NameOthers__c.field-meta.xml
<CustomField>
    <fullName>TCF_NameOthers__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>