force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_NFuncionariosAdmitidos__c.field-meta.xml
<CustomField>
    <fullName>TCF_NFuncionariosAdmitidos__c</fullName>
    <label>Number of Employees Admitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>