force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_NFuncionariosDemitidos__c.field-meta.xml
<CustomField>
    <fullName>TCF_NFuncionariosDemitidos__c</fullName>
    <label>Number of Employees Dismissed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>