force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_NomeAnalistaHSEQ__c.field-meta.xml
<CustomField>
    <fullName>TCF_NomeAnalistaHSEQ__c</fullName>
    <label>HSEQ Analyst Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>