force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_NomeCoordenadorHSEQ__c.field-meta.xml
<CustomField>
    <fullName>TCF_NomeCoordenadorHSEQ__c</fullName>
    <label>HSEQ Coordinator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>