force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_NomeEngenheiroHSEQ__c.field-meta.xml
<CustomField>
    <fullName>TCF_NomeEngenheiroHSEQ__c</fullName>
    <label>HSEQ Engineer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>