force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_NomeGerenteHSEQ__c.field-meta.xml
<CustomField>
    <fullName>TCF_NomeGerenteHSEQ__c</fullName>
    <label>HSEQ Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>