force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_NomeSegurancaTrabalho__c.field-meta.xml
<CustomField>
    <fullName>TCF_NomeSegurancaTrabalho__c</fullName>
    <label>Safety Technician Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>