force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_NTotalFuncionarios__c.field-meta.xml
<CustomField>
    <fullName>TCF_NTotalFuncionarios__c</fullName>
    <label>Total Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>