force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_NumeroAcidentesAfastamento__c.field-meta.xml
<CustomField>
    <fullName>TCF_NumeroAcidentesAfastamento__c</fullName>
    <label>Number of accidents with leave:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>