force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_NumeroCasosPrimeirosSocorros__c.field-meta.xml
<CustomField>
    <fullName>TCF_NumeroCasosPrimeirosSocorros__c</fullName>
    <label>Number of first aid cases:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>