force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_NumeroCasosTratamentoMedico__c.field-meta.xml
<CustomField>
    <fullName>TCF_NumeroCasosTratamentoMedico__c</fullName>
    <label>Number of medical treatment cases:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>