force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_NumeroDiasAfastamento__c.field-meta.xml
<CustomField>
    <fullName>TCF_NumeroDiasAfastamento__c</fullName>
    <label>Number of days off:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>