force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_NumeroFatalidades__c.field-meta.xml
<CustomField>
    <fullName>TCF_NumeroFatalidades__c</fullName>
    <label>Number of fatalities:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>