force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_NumeroQuaseAcidentes__c.field-meta.xml
<CustomField>
    <fullName>TCF_NumeroQuaseAcidentes__c</fullName>
    <label>Number of near misses:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>