force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_ObservacaoSeguranca__c.field-meta.xml
<CustomField>
    <fullName>TCF_ObservacaoSeguranca__c</fullName>
    <formula>TCF_SafetyCultureSection7__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Observações de Segurança</label>
    <type>Text</type>
</CustomField>