force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_ObservacoesSeguranca__c.field-meta.xml
<CustomField>
    <fullName>TCF_ObservacoesSeguranca__c</fullName>
    <formula>VALUE(TEXT(TCF_RatingSection7__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>7 OBSERVAÇÕES DE SEGURANÇA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>