force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_Outros__c.field-meta.xml
<CustomField>
    <fullName>TCF_Outros__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Functions</label>
    <type>Checkbox</type>
</CustomField>