force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_PCA__c.field-meta.xml
<CustomField>
    <fullName>TCF_PCA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCA</label>
    <type>Checkbox</type>
</CustomField>