force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_PPRA__c.field-meta.xml
<CustomField>
    <fullName>TCF_PPRA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Of services provided to Modec</inlineHelpText>
    <label>PPRA</label>
    <type>Checkbox</type>
</CustomField>