force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_PPRComFitTest__c.field-meta.xml
<CustomField>
    <fullName>TCF_PPRComFitTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PPR (com fit-test)</label>
    <type>Checkbox</type>
</CustomField>