force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_PrincipaisRespAnalistaHSEQ__c.field-meta.xml
<CustomField>
    <fullName>TCF_PrincipaisRespAnalistaHSEQ__c</fullName>
    <label>HSEQ Main Responsibilities Analyst</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>