force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_PrincipaisRespCoordenadorHSEQ__c.field-meta.xml
<CustomField>
    <fullName>TCF_PrincipaisRespCoordenadorHSEQ__c</fullName>
    <label>HSEQ Main Responsibilities Coordinator</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>