force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_PrincipaisRespEngenheiroHSEQ__c.field-meta.xml
<CustomField>
    <fullName>TCF_PrincipaisRespEngenheiroHSEQ__c</fullName>
    <label>HSEQ Main Responsibilities Engineer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>