force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_PrincipaisRespGerenteHSEQ__c.field-meta.xml
<CustomField>
    <fullName>TCF_PrincipaisRespGerenteHSEQ__c</fullName>
    <inlineHelpText>Main responsibilities for the performance of the management system</inlineHelpText>
    <label>HSEQ Main Responsibilities Manager</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>