force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_PrincipaisResponsabilidades__c.field-meta.xml
<CustomField>
    <fullName>TCF_PrincipaisResponsabilidades__c</fullName>
    <label>Main Responsibilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>