force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_PrincipaisRespSegurancaTrabalho__c.field-meta.xml
<CustomField>
    <fullName>TCF_PrincipaisRespSegurancaTrabalho__c</fullName>
    <label>Main Responsibilities Safety Technician</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>