force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_QtdeAlertasPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TCF_QtdeAlertasPeriodo__c</fullName>
    <label>Number of Alerts in the Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>