force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_QtdeASOPlanejadoPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TCF_QtdeASOPlanejadoPeriodo__c</fullName>
    <label>ASO Planned Period Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>