force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_QtdeASORealizadoPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TCF_QtdeASORealizadoPeriodo__c</fullName>
    <label>ASO Accomplished Period Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>