force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_QtdeDDSDSSPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TCF_QtdeDDSDSSPeriodo__c</fullName>
    <label>DDS / DSS quantity in the period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>