force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_QtdeManutencaoCalibracaoPrevista__c.field-meta.xml
<CustomField>
    <fullName>TCF_QtdeManutencaoCalibracaoPrevista__c</fullName>
    <label>Qty of Maintenance/Estimated Calibration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>