force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_QtdeManutencaoCalibracaoRealizada__c.field-meta.xml
<CustomField>
    <fullName>TCF_QtdeManutencaoCalibracaoRealizada__c</fullName>
    <inlineHelpText>Demonstrate compliance with the maintenance / calibration plan for tools and equipment.</inlineHelpText>
    <label>Qty of Maintenance/Calibration Performed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>