force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_QtdeNCAbertasPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TCF_QtdeNCAbertasPeriodo__c</fullName>
    <label>NC Quantity Opened in Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>