force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_QtdeNCFechadasPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TCF_QtdeNCFechadasPeriodo__c</fullName>
    <label>NC quantity closed in the Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>