force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_QtdeObservacoesAbertasPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TCF_QtdeObservacoesAbertasPeriodo__c</fullName>
    <label>Open Observations Period Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>