force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_QtdeObservacoesFechadasPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TCF_QtdeObservacoesFechadasPeriodo__c</fullName>
    <label>Observations Closed Period Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>