force-app/main/default/objects/TOBJ_AvaliacaoHSE__c/fields/TCF_QtdeRelatariosEmitidosPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TCF_QtdeRelatariosEmitidosPeriodo__c</fullName>
    <label>Qty of Reports Issued in the Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>